--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -21,7 +21,7 @@
   </servlet-mapping>
 
   <context-param>
-    <param-name>javax.faces.ENABLE_WEBSOCKET_ENDPOINT</param-name>
+    <param-name>org.omnifaces.SOCKET_ENDPOINT_ENABLED</param-name>
     <param-value>true</param-value>
   </context-param>
 
